# AddObj

./: .gitignore  AddObj.cpp  AddObj.h  AddObjFactory.cpp  AddObjFactory.h  AddObjGuid.h  CMakeLists.txt  Exports.cpp  Exports.def  IAdd.idl  README.md  REGISTRY.H  Registry.cpp  fany-midl.ps1
test/: .gitignore  CMakeLists.txt  IAdd.h  IAdd.tlb  lcompile.ps1  main_test.cpp
